# arch_project

./: .gitignore  Cargo.toml  rustfmt.toml
assets/: arrow.aseprite  soil.asc
mayasim_netlogo/: dem.asc
netlogo/: project.nlogo  slime.nlogo
notes/: Annotated Bibliography.md  Code.md  Coordinate Spaces.md  Design.md  Forager Model.md  GisResample.md  Ideas.md  Models.md  Presentation.md  References.md  Slime Mold.md  Todo.md  Untitled.md  annotated_biblio.odt  dictionary.md  handout.odg  handout.odt  mayasim.clj  programming.md  wolfram.wlnb
notes/.obsidian/: app.json  community-plugins.json
notes/design/: MOC.md
src/: ascii_asset.rs  ascii_grid.rs  coord.rs  drect.rs  lib.rs  main.rs  mayasim.rs  pid_control.rs  rand.rs  schedule.rs  sim.rs  sim_old.rs  sim_time.rs  update_set.rs  utils.rs  zcoord.rs
src/math/: coord.rs  drect.rs  mod.rs  size2.rs  uniform_uvec2.rs  zcoord.rs
src/sim/: agent.rs  cell.rs  cell_grid.rs  climate.rs  config.rs  map.rs  mod.rs  n8.rs  rain.rs  time.rs
src/ui/: camera.rs  egui_style.rs  mod.rs
