[package]
name = "arch_project"
version = "0.1.0"
edition = "2021"
publish = false
include = ["/src/**/*", "/Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# this feature enables `pdep` and `pext` instructions on avx2 (for zorder crate)
# needed to compare with non bmi2 implementations on Zen 1/2,
# as these instructions use microcode on these CPUs
bmi2 = []
serialize = ["bevy/serialize"]

[dependencies]
bevy_egui = "0.24"
egui_plot = "0.24"
bevy-inspector-egui = { version = "0.21.0", default-features = false }
bevy_spatial = { git = "https://github.com/funnbot/bevy-spatial", rev = "12e3a11" }
kd-tree = { version = "0.5.1", features = ["rayon"] }
rand = { version = "0.8", features = ["nightly"] }
bevy_rand = { version = "0.4", features = ["wyrand"] }
zorder = "0.1.0"
image = "0.24.7"
thiserror = "1.0.50"
typenum = "1.17.0"
smallvec = { version = "1.11", features = [
    "union",
    "const_generics",
    "const_new",
    "may_dangle",
] }

[dependencies.bevy]
version = "0.12"
default-features = false
features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_scene",
    "bevy_winit",
    "bevy_render",
    "bevy_sprite",
    "multi-threaded",
    "png",
    "ktx2",
    "zstd",
    "vorbis",
    "default_font",
    # remove dynamic_linking when sharing executables
    "dynamic_linking",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
debug = 2

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
debug = 1

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1

[workspace]
resolver = "2"

# [workspace.package."*"]
# publish = false
